[gd_scene load_steps=8 format=3 uid="uid://b0wv4pcu37j0o"]

[ext_resource type="Script" path="res://Scripts/WalkingEnemy.gd" id="1_jupch"]
[ext_resource type="Texture2D" uid="uid://bqxy4ccboh46k" path="res://characters_packed.png" id="2_4865g"]
[ext_resource type="PackedScene" uid="uid://brnec5k5wwm5l" path="res://hitbox.tscn" id="3_3mnwc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hnm8a"]
atlas = ExtResource("2_4865g")
region = Rect2(144, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgkov"]
atlas = ExtResource("2_4865g")
region = Rect2(168, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ganm6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnm8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgkov")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvsmn"]
size = Vector2(13, 10)

[node name="WalkingEnemy" type="CharacterBody2D"]
script = ExtResource("1_jupch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ganm6")
animation = &"Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5)
shape = SubResource("RectangleShape2D_qvsmn")

[node name="LedgeCheckR" type="RayCast2D" parent="."]
position = Vector2(6, -1)
target_position = Vector2(0, 2)

[node name="LedgeCheckL" type="RayCast2D" parent="."]
position = Vector2(-7, -1)
target_position = Vector2(0, 2)

[node name="Hitbox" parent="." instance=ExtResource("3_3mnwc")]
position = Vector2(-7, -2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(1, 1, 1, -7, 3, -10, 5, -12, 6, -14, 7, -14, 8, -12, 10, -10, 12, -7, 12, 1)
